<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.taskmanagement.model.CreateHP" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.login.CreateHP">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/selected_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:background="@drawable/dp"
                app:civ_border_width="3dp"
                app:civ_border_color="@color/black"
                android:imgUrlHP="@{item.imageUrl}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertprofilepic"
                android:textColor="@color/purple_700" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/yourComapnyName"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@{item.companyName}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/name"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:text="@{item.name}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/Email"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:text="@{item.email}"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:textColorHint="@color/purple_700"
                    android:textColor="@color/black"
                    android:text="@{item.designation}">
                </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700"
                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="@{item.password}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/button_shape"
                android:drawableStart="@drawable/signup_icon"
                android:text="@string/createUser"
                android:paddingStart="16dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="center"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>