<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10"
        tools:context=".activities.GoogleLoginActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            tools:ignore="UselessLeaf">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@drawable/logowhite"
                android:contentDescription="forlogo">
            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessLeaf" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:drawableLeft="@drawable/google_icon"
                android:paddingLeft="16dp"
                android:text="@string/registerwithgoole"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            tools:ignore="UselessLeaf" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>