<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.taskmanagement.model.RegisterCompany" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="10"
        tools:context=".activities.CreateCompany">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessLeaf">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/companyImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/insert_pic_icon"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertCompnyLogo"
                android:textColor="@color/purple_700" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:gravity="top"
            android:orientation="vertical"
            tools:ignore="UselessLeaf" >

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/enterComapnyName"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700"
                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/Email"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700"
                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/typeofbusiness"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700"

                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/stateorcountry"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/purple_700"

                app:boxStrokeWidth="2dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@drawable/button_shape"
                android:drawableStart="@drawable/signup_icon"
                android:text="@string/register"
                android:paddingStart="16dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textAlignment="center"/>

        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>