<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.taskmanagement.model.CreateTeam" />
    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:weightSum="10"
        tools:context=".activities.TeamActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"

        android:layout_weight="0.8">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/createTeamSpace"
            android:drawableLeft="@drawable/team_icon_white"
            android:paddingLeft="16dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="left|center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_weight="9.2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="@dimen/_30sdp"

            android:hint="@string/enterTeamNam"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/purple_700">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text="@{item.teamName}"
            android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_30sdp"
            android:hint="@string/enterStatus"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/purple_700">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@{item.status}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/button_shape"
            android:drawableStart="@drawable/signup_icon"
            android:text="@string/createTeam"
            android:paddingStart="16dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>